--- a/homework4.Variegated/style.css
+++ b/homework4.Variegated/style.css
@@ -28,6 +28,11 @@ a {
     height: 50px;
 }
 
+.header-width {
+    width: 90%;
+    margin: auto;
+}
+
 .shop-information-item {
     margin: auto;
     /* line-height: 60px; */
@@ -139,7 +144,7 @@ a {
 }
 
 .dicount-width {
-    width: 80%;
+    width: 90%;
     margin: auto;
     /* background-color: rgb(245, 245, 245); */
 }
@@ -176,6 +181,7 @@ a {
     position: absolute;
     top: 23%;
     left: 7%;
+    /* width: 40%; */
 }
 
 .discount-group-ul {
@@ -262,12 +268,13 @@ a {
 /*============== shop-categories ================*/
 
 .shop-categories-width {
-    width: 80%;
+    width: 90%;
     margin: auto;
 }
 
 .shop-categories {
     position: relative;
+    margin-bottom: 200px;
     /* text-align: center; */
 }
 
@@ -325,6 +332,62 @@ a {
 
 
 /*============== favorite blouses ================*/
+
+.favorite-blouses {
+    margin-bottom: 100px;
+    /* width: 90%; */
+    /* margin: auto; */
+    /* text-align: center; */
+}
+
+.favorite-blouses-items-group {
+    display: flex;
+    /* justify-content: center; */
+}
+
+.favorite-blouses-width {
+    width: 90%;
+    margin: auto;
+}
+
+.favorite-blouses-item {
+    width: 50%;
+}
+
+.favorite-blouses-pic {
+    width: 100%;
+}
+
+.favorite-blouses-item {
+    margin: auto;
+}
+
+.favorite-blouses-content {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    margin: 0 30px 0;
+}
+
+.favorite-blouses-content .title {
+    font-size: 20px;
+    padding: 25px 0;
+    font-weight: 700;
+}
+
+.favorite-blouses-content .text {
+    padding-bottom: 30px;
+    color: rgb(139, 139, 139);
+}
+
+.favorite-blouses-content .shop-btn {
+    background-color: black;
+    color: white;
+    width: 77px;
+    font-size: 14px;
+    font-weight: 900;
+    padding: 18px 25px;
+}
 
 
 /*============== accessories ================*/
