--- a/homework4.Variegated/style.css
+++ b/homework4.Variegated/style.css
@@ -135,6 +135,10 @@ a {
 
 /*============== discount ================*/
 
+.variegated-index {
+    display: none;
+}
+
 .discount {
     background: -webkit-linear-gradient( 90deg, rgb(252, 251, 254), rgb(245, 245, 245));
     background: linear-gradient(90deg, rgb(252, 251, 254), rgb(245, 245, 245));
@@ -354,6 +358,20 @@ a {
     width: 50%;
 }
 
+.favorite-blouses-item-pic {
+    background-color: rgb(211, 211, 211);
+    position: relative;
+    top: -30px;
+    right: -30px;
+    z-index: -1;
+}
+
+.favorite-blouses-item-pic img {
+    position: relative;
+    top: 30px;
+    right: 30px;
+}
+
 .favorite-blouses-pic {
     width: 100%;
 }
@@ -366,7 +384,7 @@ a {
     display: flex;
     flex-direction: column;
     /* justify-content: center; */
-    margin: 0 30px 0;
+    margin: 0 100px 0;
 }
 
 .favorite-blouses-content .title {
@@ -376,7 +394,7 @@ a {
 }
 
 .favorite-blouses-content .text {
-    padding-bottom: 30px;
+    padding: 0 100px 30px 0;
     color: rgb(139, 139, 139);
 }
 
@@ -392,14 +410,221 @@ a {
 
 /*============== accessories ================*/
 
+.accessories-group {
+    display: flex;
+}
+
+.accessories-group-item .img {
+    width: 100%;
+}
+
+.accessories-group-item .title {
+    text-align: center;
+    font-size: 26px;
+    position: relative;
+    top: 70px;
+}
+
+.accessories-group-item .text {
+    text-align: center;
+    font-size: 14px;
+    font-weight: 500;
+    position: relative;
+    top: -70px;
+    margin: 0 50px;
+}
+
 
 /*============== popular-models ================*/
+
+.popular-models {
+    width: 100%;
+    display: inline-block;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.popular-models-width {
+    width: 90%;
+    margin: auto;
+}
+
+.popular-models-title {
+    font-size: 16px;
+    font-weight: 900;
+    padding: 20px 20px 40px 20px;
+}
+
+.popular-models-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.popular-models-list .item {
+    width: 270px;
+    position: relative;
+    /* margin: 10px; */
+}
+
+.popular-models-list .label {
+    background-color: rgb(255, 213, 107);
+    font-size: 12px;
+    width: 50px;
+    color: white;
+    padding: 5px;
+    position: absolute;
+    right: 0;
+    top: 10px;
+}
+
+.popular-models-list .item:nth-child(1) .label {
+    display: none;
+}
+
+.popular-models-list .item:nth-child(4) .label {
+    display: none;
+}
+
+.popular-models-list .item:nth-child(6) .label {
+    display: none;
+}
+
+.popular-models-list .item:nth-child(7) .label {
+    display: none;
+}
+
+.popular-models-list .style-type {
+    font-size: 12px;
+    color: rgb(173, 173, 173);
+    font-weight: 700;
+    padding: 10px 0 7px 0;
+}
+
+.popular-models-list .product-name {
+    font-size: 16px;
+    color: rgb(108, 108, 108);
+    padding-bottom: 10px;
+    line-height: 1.2;
+}
+
+.popular-models-list .price {
+    font-size: 14px;
+    font-weight: 900;
+    padding-bottom: 10px;
+}
+
+.popular-models-list .text-group {
+    text-align: start;
+}
+
+.popular-models-list .img {
+    width: 100%;
+}
 
 
 /*============== modern-casual-essentials ================*/
 
+.modern-casual-essentials-area {
+    background-image: url(./pic/banner4.webp);
+    height: 300px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 150px 0 150px 0;
+    color: white;
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+    margin-bottom: 70px;
+}
+
+.modern-casual-essentials-subtitle {
+    font-size: 20px;
+    padding: 5px;
+}
+
+.modern-casual-essentials-title {
+    font-size: 52px;
+    font-weight: normal;
+    padding: 20px 0;
+    line-height: 1.3;
+}
+
+.modern-casual-essentials-shop-now {
+    padding: 15px 20px;
+    background-color: #000;
+    color: white;
+    display: block;
+    width: 80px;
+    font-size: 12px;
+    margin: auto;
+}
+
 
 /*============== blog ================*/
+
+.blog-area-width {
+    width: 90%;
+    text-align: center;
+    margin: auto;
+    font-size: 0;
+}
+
+.blog-area .blog-list-title {
+    font-size: 16px;
+    font-weight: 900;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+.blog-list> :first-child {
+    margin-right: 40px;
+}
+
+.blog-list-item-text-group {
+    text-align: start;
+    padding-bottom: 50px;
+    background-color: rgb(236, 236, 236);
+}
+
+.blog-list-item .article-title {
+    font-size: 24px;
+    font-weight: 900;
+    padding: 15px;
+}
+
+.blog-list-item .introduction {
+    font-size: 14px;
+    color: rgb(138, 137, 137);
+    padding: 0 0 20px 15px;
+}
+
+.blog-list-item .created-information {
+    display: flex;
+}
+
+.blog-list-item .created-date,
+.blog-list-item .author,
+.blog-list-item .Hyphen {
+    padding-left: 15px;
+    font-size: 16px;
+    color: rgb(197, 197, 197);
+}
+
+.blog-list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.blog-list-item {
+    /* margin-right: 30px; */
+    width: 50%;
+}
+
+.blog-list-item .img {
+    width: 100%;
+}
 
 
 /*============== latest-news ================*/
