--- a/Amos/homework6.sunplant-store/style.scss
+++ b/Amos/homework6.sunplant-store/style.scss
@@ -363,7 +363,7 @@
   #sunplant-header-switch {
     position: absolute;
     // z-index: 300;
-    // display: none;
+    display: none;
   }
 
   #sunplant-header-switch:checked ~ .sunplant-header-main-menu {
