--- a/Amos/homework6.sunplant-store/style.scss
+++ b/Amos/homework6.sunplant-store/style.scss
@@ -374,6 +374,9 @@
     // left: 0;
     margin: auto;
   }
+  .fa-user {
+    display: none;
+  }
 
   .sunplant-header {
     // display: flex;
@@ -417,7 +420,7 @@
     &-main-menu {
       position: fixed;
       left: -100%;
-      // z-index: 200;
+      z-index: 200;
 
       display: flex;
       flex-direction: column;
