--- a/Amos/homework6.sunplant-store-re-slicing/style.css
+++ b/Amos/homework6.sunplant-store-re-slicing/style.css
@@ -7,10 +7,34 @@ a {
   display: block;
 }
 
+img {
+  vertical-align: top;
+}
+
 @media screen and (max-width: 991px) {
   #group-switch {
     position: absolute;
     top: 0;
+    display: none;
+  }
+
+  #group-switch:checked ~ .group-nav {
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+
+  #nav-link-lv1-home {
+    display: none;
+    position: absolute;
+    top: 0;
+  }
+
+  #nav-link-lv1-home:checked ~ .nav-ul-lv2 {
+    display: block;
   }
 
   .header-sunplate {
@@ -18,17 +42,20 @@ a {
     position: sticky;
     top: 0;
   }
-
-  .wrap-header {
+  .header-sunplate .wrap-header {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
   }
 
+  .group-hamburger {
+    position: absolute;
+    left: 10px;
+    bottom: 0;
+  }
   .group-hamburger .item-hamburger {
     display: flex;
     align-items: center;
     width: 40px;
-    height: 40px;
   }
   .group-hamburger .icon-hamburger {
     width: 40px;
@@ -44,15 +71,16 @@ a {
     display: block;
     background-color: #518432;
   }
-  .group-hamburger .icon-hamburger .hamburger-line.hambuerger-line-center {
+  .group-hamburger .icon-hamburger .hamburger-line.hamburger-line-center {
     width: 50%;
   }
-  .group-hamburger .icon-hamburger .hamburger-line.hambuerger-line-bottom {
+  .group-hamburger .icon-hamburger .hamburger-line.hamburger-line-bottom {
     width: 30%;
   }
 
   .group-logo .item-logo {
-    width: 150px;
+    padding-top: 20px;
+    width: 120px;
   }
   .group-logo .logo-title {
     width: 1px;
@@ -64,6 +92,136 @@ a {
   }
 
   .group-nav {
+    position: fixed;
+    left: -100%;
+    z-index: 100;
+  }
+  .group-nav .item {
+    width: 300px;
+    background-color: rgba(0, 255, 255, 0.521);
+  }
+  .group-nav .item-switch {
+    display: flex;
+  }
+  .group-nav .box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .group-nav .box-menu {
+    width: 50%;
+    background-color: black;
+    color: white;
+    border-bottom: 1px solid black;
+  }
+  .group-nav .text-menu {
+    padding-left: 10px;
+    line-height: 50px;
+    font-size: 14px;
+  }
+  .group-nav .text {
+    padding-left: 10px;
+  }
+  .group-nav .box-login {
+    border-bottom: 1px solid #cccccc;
+    background-color: white;
+    color: black;
+  }
+  .group-nav .box-login .icon-login {
+    font-size: 22px;
+  }
+  .group-nav .icon-hamburger {
+    width: 20px;
+    height: 20px;
+  }
+  .group-nav .hamburger-line {
+    display: block;
+    height: 2px;
+    background-color: white;
+    margin-bottom: 5px;
+  }
+  .group-nav .hamburger-line.hamburger-line-top {
+    margin-top: 2px;
+  }
+  .group-nav .hamburger-line.hamburger-line-center {
+    width: 70%;
+  }
+  .group-nav .box-login {
+    width: 50%;
+  }
+  .group-nav .item-nav {
+    background-color: white;
+    height: 100%;
+  }
+  .group-nav .nav-ul .nav-ul {
     display: none;
+  }
+  .group-nav .nav-ul-lv1 {
+    box-sizing: border-box;
+    padding: 20px;
+  }
+  .group-nav .nav-li-lv1 {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .group-nav .nav-li-lv1 .nav-link-lv1 {
+    width: 90%;
+    box-sizing: border-box;
+  }
+  .group-nav .nav-li-lv1 .wrap-control-lv1 {
+    text-align: end;
+    font-size: 26px;
+    font-weight: 300;
+    width: 10%;
+    box-sizing: border-box;
+  }
+  .group-nav .nav-link-lv1 {
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    padding-bottom: 30px;
+  }
+  .group-nav .nav-ul-lv2 {
+    padding-bottom: 20px;
+  }
+  .group-nav .nav-li-lv2 {
+    padding-bottom: 30px;
+  }
+  .group-nav .nav-li-lv2 .nav-link-lv2 {
+    font-size: 14px;
+  }
+  .group-nav .item-close {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 500;
+    color: white;
+    background-color: #518432;
+    font-size: 12px;
+    line-height: 50px;
+  }
+
+  .group-user {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    font-size: 20px;
+    align-items: flex-end;
+    color: #518432;
+  }
+  .group-user .item {
+    text-align: center;
+    padding: 0 10px;
+  }
+  .group-user .item-user {
+    display: none;
+  }
+  .group-user .item-cart {
+    display: flex;
+    flex-direction: column;
+  }
+  .group-user .cart-number {
+    font-size: 12px;
   }
 }/*# sourceMappingURL=style.css.map */
