--- a/Amos/homework6.sunplant-store-re-slicing/style.scss
+++ b/Amos/homework6.sunplant-store-re-slicing/style.scss
@@ -1,10 +1,14 @@
 body {
     font-family: "Poppins", sans-serif;
+    // text-align: center;
 }
 a {
     text-decoration: none;
     // color: black;
     display: block;
+}
+img {
+    vertical-align: top;
 }
 
 .header {
@@ -28,22 +32,45 @@ a {
     #group-switch {
         position: absolute;
         top: 0;
+        // z-index: 50;
+        display: none;
+    }
+    #group-switch:checked ~ .group-nav {
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        background-color: rgba(0, 0, 0, 0.8);
+    }
+
+    #nav-link-lv1-home {
+        display: none;
+        position: absolute;
+        top: 0;
+    }
+
+    #nav-link-lv1-home:checked ~ .nav-ul-lv2 {
+        display: block;
     }
 
     .header-sunplate {
         position: sticky;
         top: 0;
+        .wrap-header {
+            display: flex;
+            justify-content: center;
+        }
     }
-    .wrap-header {
-        display: flex;
-        justify-content: space-between;
-    }
+
     .group-hamburger {
+        position: absolute;
+        left: 10px;
+        bottom: 0;
         .item-hamburger {
             display: flex;
             align-items: center;
             width: 40px;
-            height: 40px;
         }
         .icon-hamburger {
             width: 40px;
@@ -61,10 +88,10 @@ a {
                 display: block;
                 background-color: #518432;
             }
-            .hamburger-line.hambuerger-line-center {
+            .hamburger-line.hamburger-line-center {
                 width: 50%;
             }
-            .hamburger-line.hambuerger-line-bottom {
+            .hamburger-line.hamburger-line-bottom {
                 width: 30%;
             }
         }
@@ -72,7 +99,8 @@ a {
 
     .group-logo {
         .item-logo {
-            width: 150px;
+            padding-top: 20px;
+            width: 120px;
         }
         .logo-title {
             width: 1px;
@@ -85,7 +113,150 @@ a {
     }
 
     .group-nav {
-        display: none;
+        // display: none;
+        position: fixed;
+        left: -100%;
+        z-index: 100;
+        // transition: 1s;
+
+        .item {
+            width: 300px;
+            background-color: rgba(0, 255, 255, 0.521);
+        }
+        .item-switch {
+            display: flex;
+        }
+
+        .box {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .box-menu {
+            width: 50%;
+            background-color: black;
+            color: white;
+            border-bottom: 1px solid black;
+        }
+
+        .text-menu {
+            padding-left: 10px;
+            line-height: 50px;
+            font-size: 14px;
+        }
+        .text {
+            padding-left: 10px;
+        }
+        .box-login {
+            border-bottom: 1px solid #cccccc;
+            background-color: white;
+            color: black;
+            .icon-login {
+                font-size: 22px;
+            }
+        }
+        .icon-hamburger {
+            width: 20px;
+            height: 20px;
+        }
+        .hamburger-line {
+            display: block;
+            height: 2px;
+            background-color: white;
+            margin-bottom: 5px;
+        }
+        .hamburger-line.hamburger-line-top {
+            margin-top: 2px;
+        }
+
+        .hamburger-line.hamburger-line-center {
+            width: 70%;
+        }
+
+        .box-login {
+            width: 50%;
+        }
+        .item-nav {
+            background-color: white;
+            height: 100%;
+        }
+
+        .nav-ul .nav-ul {
+            display: none;
+        }
+        .nav-ul-lv1 {
+            box-sizing: border-box;
+            padding: 20px;
+        }
+
+        .nav-li-lv1 {
+            display: flex;
+            flex-wrap: wrap;
+            .nav-link-lv1 {
+                width: 90%;
+                box-sizing: border-box;
+            }
+            .wrap-control-lv1 {
+                text-align: end;
+                font-size: 26px;
+                font-weight: 300;
+                width: 10%;
+                box-sizing: border-box;
+            }
+        }
+
+        .nav-link-lv1 {
+            width: 100%;
+            height: 100%;
+            box-sizing: border-box;
+            padding-bottom: 30px;
+        }
+        .nav-ul-lv2 {
+            padding-bottom: 20px;
+        }
+
+        .nav-li-lv2 {
+            padding-bottom: 30px;
+            .nav-link-lv2 {
+                font-size: 14px;
+            }
+        }
+
+        .item-close {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            z-index: 500;
+            color: white;
+            background-color: #518432;
+            font-size: 12px;
+            line-height: 50px;
+        }
+    }
+
+    .group-user {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        display: flex;
+        font-size: 20px;
+
+        align-items: flex-end;
+        color: #518432;
+        .item {
+            text-align: center;
+            padding: 0 10px;
+        }
+        .item-user {
+            display: none;
+        }
+        .item-cart {
+            display: flex;
+            flex-direction: column;
+        }
+        .cart-number {
+            font-size: 12px;
+        }
     }
 }
 
