--- a/Amos/homework6.sunplant-store-re-slicing/style.scss
+++ b/Amos/homework6.sunplant-store-re-slicing/style.scss
@@ -4,7 +4,7 @@ body {
 }
 a {
     text-decoration: none;
-    // color: black;
+    color: black;
     display: block;
 }
 img {
@@ -44,6 +44,10 @@ img {
         background-color: rgba(0, 0, 0, 0.8);
     }
 
+    #group-switch:checked ~ .group-nav .item-close {
+        left: 0;
+    }
+
     #nav-link-lv1-home {
         display: none;
         position: absolute;
@@ -52,6 +56,59 @@ img {
 
     #nav-link-lv1-home:checked ~ .nav-ul-lv2 {
         display: block;
+    }
+
+    #nav-link-lv1-shop {
+        display: none;
+        position: absolute;
+        top: 0;
+    }
+    #nav-link-lv1-shop:checked ~ .nav-ul-lv2 {
+        display: block;
+    }
+
+    #nav-link-lv1-featured {
+        display: none;
+        position: absolute;
+        top: 0;
+    }
+    #nav-link-lv1-featured:checked ~ .nav-ul-lv2 {
+        display: block;
+    }
+
+    #nav-link-lv1-pages {
+        display: none;
+        position: absolute;
+        top: 0;
+    }
+
+    #nav-link-lv1-pages:checked ~ .nav-ul-lv2 {
+        display: block;
+    }
+    #nav-link-lv1-element {
+        display: none;
+        position: absolute;
+        top: 0;
+    }
+    #nav-link-lv1-element:checked ~ .nav-ul-lv2 {
+        display: block;
+    }
+    #box-menu,
+    #box-login {
+        display: none;
+        position: absolute;
+        top: 0;
+    }
+    #box-menu {
+    }
+
+    #box-menu:checked ~ .item-nav,
+    #box-login:checked ~ .item-login {
+        display: block;
+    }
+    #box-menu:checked ~ .item-login,
+    #box-login:checked ~ .item-nav {
+        display: none;
     }
 
     .header-sunplate {
@@ -115,13 +172,18 @@ img {
     .group-nav {
         // display: none;
         position: fixed;
+        bottom: 0;
+        top: 0;
+
         left: -100%;
         z-index: 100;
-        // transition: 1s;
+        transition: 1s;
+        overflow: auto;
+        display: flex;
+        flex-direction: column;
 
         .item {
             width: 300px;
-            background-color: rgba(0, 255, 255, 0.521);
         }
         .item-switch {
             display: flex;
@@ -146,6 +208,7 @@ img {
         }
         .text {
             padding-left: 10px;
+            cursor: pointer;
         }
         .box-login {
             border-bottom: 1px solid #cccccc;
@@ -178,7 +241,10 @@ img {
         }
         .item-nav {
             background-color: white;
-            height: 100%;
+            // height: 100%;
+            // height: 2000px;
+            // overflow: auto;
+            flex-grow: 1;
         }
 
         .nav-ul .nav-ul {
@@ -202,15 +268,16 @@ img {
                 font-weight: 300;
                 width: 10%;
                 box-sizing: border-box;
+                cursor: pointer;
             }
         }
 
         .nav-link-lv1 {
-            width: 100%;
-            height: 100%;
             box-sizing: border-box;
             padding-bottom: 30px;
+            font-size: 16px;
         }
+
         .nav-ul-lv2 {
             padding-bottom: 20px;
         }
@@ -218,19 +285,92 @@ img {
         .nav-li-lv2 {
             padding-bottom: 30px;
             .nav-link-lv2 {
-                font-size: 14px;
+                margin-bottom: 7px;
+                font-size: 15px;
+                margin-left: 5px;
             }
         }
 
+        .item-login {
+            display: none;
+        }
+
         .item-close {
-            position: absolute;
+            position: fixed;
+
             bottom: 0;
-            left: 0;
-            z-index: 500;
+            left: -100%;
+            // z-index: 500;
             color: white;
             background-color: #518432;
             font-size: 12px;
             line-height: 50px;
+            transition: 1s;
+        }
+
+        .nav-link-lv2-underline {
+            background-color: #518432;
+            display: block;
+            width: 70px;
+            height: 2px;
+            margin-bottom: 7px;
+            margin-left: 5px;
+        }
+        .nav-link-lv3 {
+            font-size: 14px;
+            padding: 5px 0;
+            margin-left: 10px;
+        }
+
+        .item-login {
+            text-align: center;
+            flex-grow: 1;
+            background-color: white;
+            display: flex;
+            flex-direction: column;
+            // padding: 10px;
+            // box-sizing: border-box;
+            .box-icon {
+                font-size: 32px;
+                padding: 30px 0;
+            }
+            .user-input {
+                width: 90%;
+                height: 30px;
+                margin-bottom: 20px;
+            }
+        }
+        .user-input-forgot {
+            font-size: 12px;
+            text-align: start;
+            padding-left: 10px;
+            margin-bottom: 20px;
+        }
+        .user-input-btn {
+            background-color: black;
+            color: white;
+            width: 90%;
+            margin: auto;
+            font-size: 14px;
+            padding: 15px 0;
+
+            letter-spacing: 4px;
+        }
+        .box-or {
+            margin: 20px 10px;
+        }
+        .box-or::after,
+        .box-or::before {
+            content: "";
+            height: 1px;
+            background-color: #cccccc;
+            flex-grow: 1;
+            margin: 0 10px;
+        }
+        .box-Register {
+            letter-spacing: 1px;
+            font-size: 14px;
+            font-weight: 500;
         }
     }
 
