--- a/Topic/PawsDay/style/style.css
+++ b/Topic/PawsDay/style/style.css
@@ -341,6 +341,38 @@ button:focus,
 }
 
 /*----手機板結束-----------------------------------------------------------------------------------------------------*/
+/*-----common-problem Home 開始----------------------------------------------------------------------------------------------------*/
+.common-problem-header .logo {
+  height: 60px;
+}
+.common-problem-header img {
+  height: 100%;
+  width: auto;
+}
+
+.common-problem-container .search-area {
+  height: 210px;
+  background-color: var(--clr-bg-y);
+}
+.common-problem-container .slogan {
+  color: var(--clr-specfont);
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 41px;
+  letter-spacing: 3px;
+  margin-bottom: 10px;
+}
+.common-problem-container .search-input {
+  border: 0px;
+}
+.common-problem-container .search-btn {
+  width: 60px;
+  color: white;
+  background-color: var(--clr-primary);
+  border: 0px;
+}
+
+/*-----common-problem Home 結束----------------------------------------------------------------------------------------------------*/
 @media screen and (min-width: 768px) {
   .col-md-1 {
     width: 8.3333%;
@@ -377,6 +409,10 @@ button:focus,
   }
   .col-md-12 {
     width: 100%;
+  }
+  /*---------------common-problem 開始---------------------------------------------------------*/
+  .common-problem-container .search-area .container {
+    max-width: 768px;
   }
 }
 @media screen and (min-width: 992px) {
@@ -415,6 +451,14 @@ button:focus,
   }
   .col-lg-12 {
     width: 100%;
+  }
+  /*---------------common-problem 開始---------------------------------------------------------*/
+  .common-problem-container .search-area {
+    height: 255px;
+  }
+  .common-problem-container .slogan {
+    font-size: 28px;
+    line-height: 44px;
   }
 }
 @media screen and (min-width: 1200px) {
