--- a/Topic/PawsDay/style/loginregister.scss
+++ b/Topic/PawsDay/style/loginregister.scss
@@ -123,7 +123,7 @@
             font-size: 18px;
             letter-spacing: 2px;
         }
-        .modal-body {
+        .modal-content {
             border-top: 5px solid var(--clr-border);
         }
         .content {
