--- a/Topic/PawsDay/style/loginregister.scss
+++ b/Topic/PawsDay/style/loginregister.scss
@@ -141,3 +141,149 @@
         }
     }
 }
+
+// -----------------------------------------------------------------------------------------------------------------------------------------------------------
+
+.login-register-forgot {
+    .title {
+        font-size: 22px;
+        font-weight: 700;
+        letter-spacing: 1px;
+    }
+
+    .subtitle {
+        color: #666666;
+        font-weight: 400;
+        font-size: 16px;
+        letter-spacing: 1px;
+    }
+    .modal-body {
+        padding: 0;
+    }
+    .input-group-text {
+        background-color: transparent;
+        color: rgb(135, 135, 135, 0.733);
+        font-size: 14px;
+    }
+    .btn.btn-link.back {
+        padding: 0 10px;
+        font-size: 20px;
+        color: black;
+    }
+
+    .main-btn {
+        border-radius: 5px;
+        background-color: var(--clr-primary);
+        font-size: 14px;
+        color: var(--clr-specfont);
+    }
+
+    .other-btn {
+        display: inline-block;
+        font-size: 14px;
+        color: rgb(135, 135, 135, 0.733);
+    }
+
+    .notice {
+        font-family: Noto Sans TC, sans-serif;
+    }
+    .notice-url {
+        font-size: 12px;
+        color: var(--clr-primary);
+    }
+
+    .login-url {
+        border-color: rgba(207, 207, 207, 0.733);
+        font-size: 15px;
+        line-height: 2;
+        letter-spacing: 1px;
+        transition: 0.3s;
+        &:hover {
+            color: black;
+            border-color: rgb(176, 176, 176);
+        }
+    }
+
+    .position-absolute.icon {
+        left: 20px;
+        top: 13.5px;
+    }
+
+    .position-absolute.icon.google {
+        top: 7px;
+    }
+
+    .fa-regular.fa-envelope.login {
+        color: black;
+    }
+
+    .fa-brands.fa-facebook {
+        color: #1773ea;
+    }
+    .fa-brands.fa-line {
+        color: #06c152;
+    }
+}
+.list-group-item + .list-group-item {
+    border: var(--bs-list-group-border-width) solid var(--bs-list-group-border-color);
+}
+
+#login-register-desktop {
+    .btn-close {
+        font-size: 14px;
+    }
+}
+
+#login-ok-desktop {
+    .position-absolute.icon {
+        left: 20px;
+    }
+    .head-shot {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        overflow: hidden;
+    }
+
+    .other-btn.switch-btn {
+        font-size: 15px;
+        letter-spacing: 1px;
+    }
+}
+
+#login-desktop {
+    .forgot-password-url {
+        font-size: 14px;
+        color: rgb(135, 135, 135, 0.733);
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .login-register-forgot {
+        .title {
+            font-size: 26px;
+            font-weight: 400;
+        }
+
+        .subtitle {
+            font-size: 18px;
+            letter-spacing: 2px;
+        }
+        .modal-content {
+            border-top: 5px solid var(--clr-border);
+        }
+        .content {
+            padding: 0 40px;
+        }
+    }
+
+    #login-desktop {
+        .btn.btn-link.more {
+            padding: 20px 0;
+        }
+
+        .btn-close {
+            font-size: 18px;
+        }
+    }
+}
